# AudioMetaEditor

./: CMakeLists.txt  README.md  audiofiledropreceiver.cpp  audiofiledropreceiver.h  audiometadatawidget.cpp  audiometadatawidget.h  filelistwidget.cpp  filelistwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openfilebutton.cpp  openfilebutton.h  resources.qrc  scaledsvgwidget.cpp  scaledsvgwidget.h  style.qss
test/: CMakeLists.txt  test_meta_parsing.cpp
